added KMP webview and starting map